@@ -77,7 +77,7 @@ for ac_cgal_iterate in $ac_cgal_dirs ; do
 	CPPFLAGS="$CPPFLAGS $CGAL_CPPFLAGS $BOOST_CPPFLAGS"
 	export CPPFLAGS
 
-	CGAL_LDFLAGS="-L$ac_cgal_iterate/lib -lCGAL -lCGAL_Core"
+	CGAL_LDFLAGS="-L$ac_cgal_iterate/lib -R$ac_cgal_iterate/lib -lCGAL -lCGAL_Core"
 	LDFLAGS_SAVED="$LDFLAGS"
 	LDFLAGS="$LDFLAGS $CGAL_LDFLAGS"
 	export LDFLAGS
